# radish

./: Cargo.toml
src/: main.rs
src/shell/: mod.rs
src/shell/completion/: fuzzy.rs  mod.rs
src/shell/completion/engines/: mod.rs  path_completion.rs  user_completion.rs
src/shell/history/: mod.rs  model.rs  schema.rs
src/shell/jobs/: job.rs  mod.rs
src/shell/readline/: char_iter.rs  completion.rs  config.rs  delegate.rs  editor.rs  error.rs  history.rs  keymap.rs  kill_ring.rs  line_buffer.rs  mod.rs  pager.rs
src/shell/readline/display/: color.rs  mod.rs
src/shell/readline/line_editor/: mod.rs
src/shell/readline/line_editor/liner/: buffer.rs  editor.rs  event.rs  history.rs  mod.rs  util.rs
src/shell/readline/line_editor/liner/keymap/: emacs.rs  mod.rs  vi.rs
src/shell/readline/tty/: mod.rs  unix.rs
src/shell/state/: mod.rs
src/shell/state/jobs/: mod.rs
src/shell/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/sys/: mod.rs
