[package]
name = "radish"
version = "0.1.0"
authors = ["Souvik Banerjee <souvik1997@gmail.com>"]

[dependencies]
unicode-segmentation = "^1.0"
unicode-width = "^0.1.3"
nix = "^0.8"
nom = "^3.2"
users = "^0.6.0"
rlua = "^0.10.2"
glob = "^0.2.11"
termion = "^1.5.1"
bitflags = "^1.0.1"
unicode-normalization = "0.1.5"
